# Genshin-Tower

./: .gitignore  build.bat  main game upgrate by Gemini.py  main game.py  main.py  pyproject.toml  tinytask.ini  遊戲更新與機制匯總.md
Genshin-Tower-main/: 22.py  build.bat
src/genshin_spire/: __init__.py  animation.py  audio.py  battle.py  card.py  config.py  main.py  particle.py  resources.py  save.py
src/genshin_spire/ui/: __init__.py  battle.py  common.py  deck_view.py  discovery.py  main_menu.py  mechanics.py  mode_select.py  rewards.py  settings.py  slot_select.py  upgrade.py
tests/: conftest.py  test_battle.py  test_card.py  test_import.py  test_save.py
